--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "express-swaggerize-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Express middleware to display a swagger-ui 3 page",
   "main": "index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "static"
   ],
   "scripts": {
     "jshint": "jshint --reporter node_modules/jshint-stylish index.js"
