--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-swaggerize-ui",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Express middleware to display a swagger-ui 3 page",
   "main": "index.js",
   "files": [
@@ -30,7 +30,5 @@
   "dependencies": {
     "express": "^4.13.3"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
